--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -1,11 +1,33 @@
 .card {
-  width: 200;
-  margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+  margin: 0 2rem;
+  height: 45rem;
+  border-radius: 10px;
 }
 
+.imgContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+}
 .image {
   width: 100%;
-  height: 300px;
+  height: 350px;
   object-fit: cover;
   border-radius: 20px;
+}
+
+.imgContainer:hover {
+  transform: scale(1.1);
+  transition: all 0.5s;
+}
+
+.title {
+  height: 15%;
+  font-size: 1.6rem;
+  font-weight: 700;
 }
