--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  font-size: 62.5%;
+}
 
 body {
   font-family: "poppins", sans-serif;
+  padding: 0 4rem;
 }
